Time: 28 ms (80.38%), Space: 51.4 MB (71.63%) - LeetHub